@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,10 +23,7 @@
 
 // key: compiler.err.local.classes.cant.extend.sealed
 // key: compiler.err.sealed.class.must.have.subclasses
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
 // key: compiler.misc.anonymous
-// options: --enable-preview -source ${jdk.version}
 
 class Main {
     void m() {
